--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             }
         </style>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+        <script src="https://unpkg.com/common-tags"></script>
     </head>
     <body>
         <div id="app">
@@ -65,15 +66,14 @@
                     <i class="fas fa-play" v-if="paused"></i>
                     <i class="fas fa-pause" v-else></i>
                 </div>
-                <video id="myvideo" autoplay muted :src="src"></video> 
+                <video id="manimVid" autoplay muted :src="src"></video> 
                 <pre id="code"></pre> 
             </div>
         </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
-        // const video = document.getElementById("myvideo")
-        
+        const { stripIndents } = commonTags;
         const app = new Vue({
             el: "#app",
             data: {
@@ -83,72 +83,77 @@
                     {
                         title: "TextMobject",
                         time: 0,
-                        code: `# TextMobject
-text_mobject = TextMobject("TextMobject")
-self.play(Write(text_mobject))
-self.wait()
-self.play(FadeOut(text_mobject))`
+                        code: stripIndents`
+                                # TextMobject
+                                text_mobject = TextMobject("TextMobject")
+                                self.play(Write(text_mobject))
+                                self.wait()
+                                self.play(FadeOut(text_mobject))`
                     },
                     {
                         title: "TexMobject",
                         time: 4,
-                        code: `# TexMobject
-tex_mobject = TextMobject("TexMobject")
-tex_mobject.shift(UP)
-formula = TexMobject("\sum_{k=0}^\\infty \\frac{c}{k^2} =  \\frac{8\\pi^2}{996}")
-formula.shift(UP)
-formula.next_to(tex_mobject, DOWN)
-self.play(Write(tex_mobject), Write(formula))
-self.wait()
-self.play(FadeOut(tex_mobject), FadeOut(formula))`
+                        code: stripIndents`
+                            # TexMobject
+                            tex_mobject = TextMobject("TexMobject")
+                            tex_mobject.shift(UP)
+                            formula = TexMobject("\sum_{k=0}^\\infty \\frac{c}{k^2} =  \\frac{8\\pi^2}{996}")
+                            formula.shift(UP)
+                            formula.next_to(tex_mobject, DOWN)
+                            self.play(Write(tex_mobject), Write(formula))
+                            self.wait()
+                            self.play(FadeOut(tex_mobject), FadeOut(formula))`
                     },
                     {
                         title: "NumberLine",
                         time: 8,
-                        code: `# number line
-number_line = NumberLine()
-number_line.add_numbers()
-self.play(ShowCreation(number_line, submobject_mode = "one_at_a_time"))
+                        code: stripIndents`
+                            # number line
+                            number_line = NumberLine()
+                            number_line.add_numbers()
+                            self.play(ShowCreation(number_line, submobject_mode = "one_at_a_time"))
 
-number_line_text = TextMobject("NumberLine")
-number_line_text.shift(UP)
-self.play(Write(number_line_text))
-self.wait()
-self.play(FadeOut(number_line_text))
-self.play(FadeOut(number_line))`
+                            number_line_text = TextMobject("NumberLine")
+                            number_line_text.shift(UP)
+                            self.play(Write(number_line_text))
+                            self.wait()
+                            self.play(FadeOut(number_line_text))
+                            self.play(FadeOut(number_line))`
                     },
                     {
                         title: "NumberPlane",
                         time: 13,
-                        code: `# TexMobject
-tex_mobject = TextMobject("TexMobject")
-tex_mobject.shift(UP)
-formula = TexMobject("\sum_{k=0}^\\infty \\frac{c}{k^2} =  \\frac{8\\pi^2}{996}")
-formula.shift(UP)
-formula.next_to(tex_mobject, DOWN)
-self.play(Write(tex_mobject), Write(formula))
-self.wait()
-self.play(FadeOut(tex_mobject), FadeOut(formula))`
+                        code: stripIndents`
+                            # TexMobject
+                            tex_mobject = TextMobject("TexMobject")
+                            tex_mobject.shift(UP)
+                            formula = TexMobject("\sum_{k=0}^\\infty \\frac{c}{k^2} =  \\frac{8\\pi^2}{996}")
+                            formula.shift(UP)
+                            formula.next_to(tex_mobject, DOWN)
+                            self.play(Write(tex_mobject), Write(formula))
+                            self.wait()
+                            self.play(FadeOut(tex_mobject), FadeOut(formula))`
                     },
                     {
                         title: "Vector",
                         time: 16,
-                        code: `# vector
-vector = Vector([-2, 3])
-self.show_mobject("Vector", vector, GrowArrow, shift=UP+2*LEFT)`
+                        code: stripIndents`
+                            # vector
+                            vector = Vector([-2, 3])
+                            self.show_mobject("Vector", vector, GrowArrow, shift=UP+2*LEFT)`
                     },
                     {
                         title: "Dot",
                         time: 20,
-                        code: `# dot
-self.show_mobject("Dot", Dot(radius = 0.1).set_color(RED),
-    GrowFromCenter, shift=0.5*(UP+LEFT))`
+                        code: stripIndents`
+                            # dot
+                            self.show_mobject("Dot", Dot(radius = 0.1).set_color(RED),
+                                GrowFromCenter, shift=0.5*(UP+LEFT))`
                     },
                     {
                         title: "Line",
                         time: 24,
-                        code: `self.show_mobject("Line", Line(ORIGIN, UP+2*RIGHT), ShowCreation,
-    shift=1.5*(UP+0.5*RIGHT))`
+                        code: `self.show_mobject("Line", Line(ORIGIN, UP+2*RIGHT), ShowCreation, shift=1.5*(UP+0.5*RIGHT))`
                     },
                     {
                         title: "Brace",
@@ -158,65 +163,49 @@ self.show_mobject("Dot", Dot(radius = 0.1).set_color(RED),
                     {
                         title: "ParametricFunction",
                         time: 30,
-                        code: `graph = ParametricFunction(
-    lambda t : 4*t*RIGHT + 2*smooth(t)*UP
-)
-graph_line = Line(graph.points[0], graph.points[-1], color = WHITE)
-graph_text = TextMobject("ParametricFunction")
-graph_text.next_to(graph, 0.5*UP+2*LEFT)
+                        code: stripIndents`
+                            graph = ParametricFunction(lambda t : 4*t*RIGHT + 2*smooth(t)*UP)
+                            graph_line = Line(graph.points[0], graph.points[-1], color = WHITE)
+                            graph_text = TextMobject("ParametricFunction")
+                            graph_text.next_to(graph, 0.5*UP+2*LEFT)
 
-self.play(ShowCreation(graph), Write(graph_text))
-self.play(Transform(graph, graph_line))
-self.play(Uncreate(graph), FadeOut(graph_text))`
+                            self.play(ShowCreation(graph), Write(graph_text))
+                            self.play(Transform(graph, graph_line))
+                            self.play(Uncreate(graph), FadeOut(graph_text))`
                     },
                 ]
             },
-            computed: {
-                time() {
-                    return myvideo.currentTime;
-                }
-            },
             methods: {
-                getCode() {
-                    
-                },
                 jumpTo(time) {
-                    myvideo.play();
-                    myvideo.pause();
-                    myvideo.currentTime = time;
-                    myvideo.play();
-                    paused = false
+                    manimVid.play();
+                    manimVid.pause();
+                    manimVid.currentTime = time;
+                    manimVid.play();
+                    paused = false;
                 },
                 playPause() {
-                    if (myvideo.paused) {
-                        myvideo.play();
+                    if (manimVid.paused) {
+                        manimVid.play();
                     } else {
-                        myvideo.pause();
+                        manimVid.pause();
                     }
                 }
             }
         })
-        const code = document.querySelector("#code")
-                    const myTimer = () => {
-                        let mobjectOn = app.$data.mobjects[0];
-                        // console.log(this.$data.mobjects);
-                        for (let i = 0; i < app.$data.mobjects.length; i++) {
-                            // console.log(myvideo.currentTime);
-                            const mobject = app.$data.mobjects[i];
-                            time = myvideo.currentTime;
-                            // console.log(mobjectOn)
-                            //     console.log(`mobject.time: ${mobject.time}`);
-                            //     console.log(`time: ${time}`);
-                            if (mobject.time < time) {
-                                mobjectOn = mobject;
-                            } else {
-                                break;
-                            }
-                        }
-                        // console.log(mobjectOn.code);
-                        code.innerText = mobjectOn.code;
-                        // return ;
-                    }
-                    const myVar = setInterval(myTimer, 500);
+        const code = document.querySelector("#code");
+        const updateMobjectTimer = () => {
+            let mobjectOn = app.$data.mobjects[0];
+            for (let i = 0; i < app.$data.mobjects.length; i++) {
+                const mobject = app.$data.mobjects[i];
+                time = manimVid.currentTime;
+                if (mobject.time < time) {
+                    mobjectOn = mobject;
+                } else {
+                    break;
+                }
+            }
+            code.innerText = mobjectOn.code;
+        };
+        setInterval(updateMobjectTimer, 500);
     </script>
 </html>
